--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Credential information
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
